@@ -13,7 +13,8 @@ Changes since 0.1.13:
 
 * Made zero-install slightly more verbose by default.
 
-* Refuse to process an index file if the path attribute is wrong.
+* Warn about processing an index file if the path attribute is wrong.
+
 
 Changes since 0.1.12:
 
